[gd_scene load_steps=5 format=3 uid="uid://b5qgxelnnw7um"]

[ext_resource type="Script" path="res://assets/debug/gameplay/scripts/debug_combat.gd" id="1_5tb6i"]
[ext_resource type="LabelSettings" uid="uid://3rkfidxeoaqe" path="res://assets/common/fonts/debug/debug_h1_font.tres" id="2_8cugh"]
[ext_resource type="PackedScene" uid="uid://baj8jkegepq5f" path="res://assets/debug/gameplay/scenes/debug_units_input.tscn" id="2_s85i6"]

[sub_resource type="LabelSettings" id="LabelSettings_r5jxv"]
font_size = 14

[node name="CombatGroup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5tb6i")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
label_settings = ExtResource("2_8cugh")

[node name="TitleSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Health" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Health: 20/20"
label_settings = SubResource("LabelSettings_r5jxv")

[node name="YourLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "You"
label_settings = SubResource("LabelSettings_r5jxv")

[node name="YourUnits" parent="VBoxContainer" instance=ExtResource("2_s85i6")]
layout_mode = 2

[node name="YourRolls" type="HFlowContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10

[node name="EnemyLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Enemy"
label_settings = SubResource("LabelSettings_r5jxv")

[node name="EnemyUnits" parent="VBoxContainer" instance=ExtResource("2_s85i6")]
layout_mode = 2
consume_available = false

[node name="EnemyRolls" type="HFlowContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="RollButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Roll"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="Results" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
